<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <Button
        android:id="@+id/confirmarActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Botao salvar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageViewPro_5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/hide" />

        <EditText
            android:id="@+id/CompleteNameProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CompleteNameProET_5" />

    </LinearLayout>

    <TextView
        android:id="@+id/BirthProET_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BirthProET_5"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="49dp">

        <AutoCompleteTextView
            android:id="@+id/DayProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DayProET_5" />

        <AutoCompleteTextView
            android:id="@+id/MonthProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MonthProET_5" />

        <AutoCompleteTextView
            android:id="@+id/yearProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearProET_5" />


    </LinearLayout>

    <TextView
        android:id="@+id/SexProTV_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SexProTV_5"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingBottom="10dp">

        <RadioButton
            android:id="@+id/MaleProRB_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MaleProRB_5" />

        <RadioButton
            android:id="@+id/FemaleProRB_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FemaleProRB_5" />


    </LinearLayout>


    <EditText
        android:id="@+id/celularET_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CelProET_5" />

    <EditText
        android:id="@+id/EmailProET_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailProET_5" />

    <TextView
        android:id="@+id/pointofcareTV_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointofcareTV_5"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/StreetProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StreetProET_5" />

        <EditText
            android:id="@+id/NumberProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NumberProET_5" />

        <EditText
            android:id="@+id/CEPProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CEPProET_5" />
    </LinearLayout>

    <EditText
        android:id="@+id/ComplementProET_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ComplementProET_5" />

    <EditText
        android:id="@+id/neighborhoodProET_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neighborhoodProET_5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cityProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityProET_5" />

        <EditText
            android:id="@+id/stateProET_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stateProET_5" />
    </LinearLayout>

</LinearLayout>
